Fixed broken tooltip in New Clipping dialog (part of issue #102)

--- a/src/style/tooltip.css
+++ b/src/style/tooltip.css
@@ -32,7 +32,7 @@
     display: none;
     
     width: max-content;
-    max-width: 300px;
+    max-width: 310px;
     height: max-content;
     box-sizing: border-box;
     padding: 2px 3px 2px 3px;    
